[package]
name = "shrd_sec_lib"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2018"

[dependencies]
threshold_crypto = "0.3.2"
ofb = "0.1.1"
aes = "0.3.2"
rand = "0.6.5"
bincode = "1.2.1"
sha3 = "0.8.2"
secrecy = "0.6.0"
thiserror = "1.0.11"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
overflow-checks = true
